tests/NormalTests/paczka1/small_fuzzy/40127507.err
Error in line 2: 1VsCQEtNwE S253 10,3
Error in line 10: lsydn317X A68 79,1
